Test/git-issues/github-issue-3484b.dfy.expect
github-issue-3484b.dfy(5,2): Error: match has no cases
1 resolution/type errors detected in github-issue-3484b.dfy
