Test/git-issues/github-issue-3484b.dfy
// RUN: ! %baredafny verify %args "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

function Bar(x: int): int {
  match x {
  }
}